# ASCC

./: .clang-format  .gitignore  CMakeLists.txt
include/: globals.h  lexer.h  parser.h
src/: lexer.c  main.c  parser.c
